--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,14 +21,24 @@ jobs:
             libfreetype-dev libfontconfig1-dev \
             libx11-dev libxcomposite-dev libxcursor-dev libxext-dev libxinerama-dev libxrandr-dev libxrender-dev \
             libwebkit2gtk-4.1-dev \
-            libglu1-mesa-dev mesa-common-dev
+            libglu1-mesa-dev mesa-common-dev \
+            valgrind
 
     - name: Download JUCE
       run: |
         git clone --depth 1 --branch 8.0.6 https://github.com/juce-framework/JUCE.git ~/JUCE
 
-    - name: Build and Run Tests
+    - name: Build TestApplication
       run: |
         cd TestApplication/Builds/LinuxMakefile
-        make CONFIG=Debug
+        make CONFIG=Test
+
+    - name: Run Tests
+      run: |
+        cd TestApplication/Builds/LinuxMakefile
         ./build/TestApplication
+
+    - name: Run Memory Checker
+      run: |
+        cd TestApplication/Builds/LinuxMakefile
+        valgrind --suppressions=../../main.supp --tool=memcheck --leak-check=full --error-exitcode=1 --num-callers=30 -s ./build/TestApplication
